# SHALOM

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  AGENT_GUIDELINES.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
agentmat/core/: llm_provider.py
docker/: Dockerfile  entrypoint.sh
docs/: api_reference.rst  architecture.rst  conf.py  index.rst  installation.rst  master_design_document.md  quickstart.rst  requirements.txt
docs/_build/html/: .buildinfo  api_reference.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api_reference.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_sources/: index.rst.txt  quickstart.rst.txt
docs/tutorials/: 01_basic_material_search.ipynb  02_custom_agent_pipeline.ipynb
scripts/: setup_wsl_qe.sh  test_design_layer_api.py  validate_dft.py  validate_v1.py
shalom/: __init__.py  __main__.py  _config_loader.py  _config_schemas.py  _defaults.py  direct_run.py  mcp_server.py  mp_client.py  pipeline.py
shalom/agents/: design_layer.py  evaluators.py  review_layer.py  simulation_layer.py
shalom/analysis/: __init__.py  _base.py  elastic.py  electronic.py  magnetic.py  md.py  phonon.py  symmetry.py  xrd.py
shalom/backends/: __init__.py  _compression.py  _physics.py  base.py  error_recovery.py  lammps.py  lammps_config.py  qe.py  qe_config.py  qe_error_recovery.py  qe_parser.py  runner.py  slurm.py  vasp.py  vasp_config.py
shalom/config/: correction_strategies.yaml  enmax_values.yaml  error_patterns.yaml  evaluator_weights.yaml  hubbard_u.yaml  incar_presets.yaml  lammps_potentials.yaml  magnetic_elements.yaml  metallic_elements.yaml  potcar_mapping.yaml  qe_correction_strategies.yaml  qe_error_patterns.yaml  qe_presets.yaml  sssp_metadata.yaml
shalom/core/: audit.py  llm_provider.py  sandbox.py  schemas.py
shalom/demo/: __init__.py  __main__.py  canned_provider.py  console.py  cost_tracker.py  report.py  runner.py  scenarios.py
shalom/plotting/: __init__.py  band_plot.py  combined_plot.py  dos_plot.py  md_plot.py  phonon_plot.py  xrd_plot.py
shalom/prompts/: coarse_selector.md  eval_confidence_rule.md  eval_dft_feasibility.md  eval_environmental_cost.md  eval_novelty.md  eval_stability.md  eval_synthesizability.md  eval_target_property.md  fine_selector.md  geometry_generator.md  review_agent.md
shalom/tools/: ase_builder.py
shalom/workflows/: __init__.py  base.py  convergence.py  standard.py
tests/: conftest.py  test_analysis_elastic.py  test_analysis_electronic.py  test_analysis_magnetic.py  test_analysis_md.py  test_analysis_phonon.py  test_analysis_symmetry.py  test_analysis_xrd.py  test_ase_builder.py  test_backends.py  test_band_plot.py  test_cli_lammps.py  test_cli_main.py  test_combined_plot.py  test_compression.py  test_config_loader.py  test_config_summary.py  test_convergence.py  test_demo.py  test_design_layer.py  test_direct_run.py  test_dos_plot.py  test_error_recovery.py  test_evaluators.py  test_integration.py  test_lammps_backend.py  test_lammps_config.py  test_llm_parsing.py  test_llm_provider.py  test_mcp_load_context.py  test_mcp_server.py  test_md_plot.py  test_mp_client.py  test_phonon_plot.py  test_physics.py  test_pipeline.py  test_qe_backend.py  test_qe_config.py  test_qe_error_recovery.py  test_qe_parser.py  (+12 more)
tests/fixtures/: dummy_outcar.txt  mock_bands_xml.xml
tutorials/: 02_fe2o3_magnetic_oxide.ipynb  03_multiscale_md_pipeline.ipynb  README.md
tutorials/01_silicon/: notebook.ipynb
tutorials/01_silicon/expected_output/: electronic_results.json  results_summary.json  symmetry_results.json  xrd_results.json
tutorials/02_fe2o3/: notebook.ipynb
tutorials/02_fe2o3/expected_output/: magnetic_results.json  results_summary.json  symmetry_results.json  xrd_results.json
tutorials/03_multiscale_md/: notebook.ipynb
tutorials/03_multiscale_md/expected_output/: md_analysis_results.json  run_info_ar.json  run_info_fe.json  run_info_si.json
