[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shalom"
version = "0.1.0"
description = "Multi-Agent Autonomous Materials Discovery Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SHALOM Contributors"}
]
dependencies = [
    "ase>=3.22.1",
    "pymatgen>=2023.10.11",
    "numpy>=1.24.0",
    "pydantic>=2.4.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8",
    "black"
]
