[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shalom"
version = "0.1.0"
description = "Multi-Agent Autonomous Materials Discovery Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shinwon Son", email = "hiposon214@gmail.com"}
]
keywords = ["materials-science", "llm", "multi-agent", "dft", "ase", "autonomous-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
    "ase>=3.22.1",
    "numpy>=1.24.0",
    "pydantic>=2.4.0",
    "openai>=1.40.0",   # beta.chat.completions.parse (structured outputs) requires >=1.40
    "anthropic>=0.25.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/hipo-son/SHALOM"
Repository = "https://github.com/hipo-son/SHALOM"
Documentation = "https://shalom.readthedocs.io"

[project.optional-dependencies]
pymatgen = [
    "pymatgen>=2023.10.11"
]
mp = [
    "mp-api>=0.39.0",
    "pymatgen>=2023.10.11,<2025.10.0",  # 2025.10+ has upstream IndexError in Outcar.__init__
]
plotting = [
    "matplotlib>=3.5.0",
    "seekpath>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "black",
    "mypy",
    "rich>=13.0",   # needed to run demo tests in dev environment
    "matplotlib>=3.5.0",   # for plotting tests
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "nbsphinx",
    "sphinx-copybutton"
]
demo = [
    "rich>=13.0"
]
all = [
    "shalom[pymatgen,mp,dev,docs,demo,plotting]"
]

[project.scripts]
shalom = "shalom.__main__:main"
shalom-demo = "shalom.demo.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=shalom --cov-report=xml --cov-fail-under=85 -v -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: requires pw.x / QE in WSL (slow, ~20min). Run with: pytest -m integration --no-cov",
]

[tool.setuptools.package-data]
shalom = ["prompts/*.md", "config/*.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shalom*"]
